# org-foundry-sync

./: .dir-locals.el  LICENSE  README.md  pyproject.toml
src/orgfoundry/: foundry.py
src/orgfoundrysync/: __init__.py  commandline.py  commands.py  dbus_service.py  foundry.py
tests/: test_graph.py  test_loading.py
