[tool.poetry]
name = "orgfoundrysync"
version = "0.1.0"
description = "Allow syncing journal notes from FoundryVTT to org files."
authors = ["Florian Bergmann <Bergmann.F@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.14.1"
pypandoc = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
